Text wrapping issues handled

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -11,11 +11,3 @@
   color: var(--ntr-dark-violet);
   font-weight: 300;
 }
-h3 {
-  // font-size: 24px;
-}
-p {
-  // font-family: 'Josefin Sans', sans-serif;
-  // color: #828281;
-  // font-size: 22px;
-}
