--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -6,7 +6,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  // justify-content: center;
 
   @include mq(lg) {
     align-items: flex-start;
@@ -22,7 +21,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-auto-columns: 1fr;
-  grid-gap: 30px;
+  grid-gap: 1.875rem;
   margin: 0 auto;
 }
 
@@ -31,8 +30,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
-  margin-block: 30px;
+  gap: 1.25rem;
+  margin-block: 1.875rem;
   background-color: var(--white);
   padding: 3rem 1rem;
   border-radius: 6px;
